 * The help for the chat system (@channel) has been rewritten. [MG]
 * autodetect_list now returns 'm' sort for unknown list types instead of
   alphanum, so sorting on strings will now treat numbers in them as
   separate comparisons by default. [GM]
 * setunion(), setdiff(), setinter() now autodetect lists in all cases where
   no sort type is provided instead of just some cases. [GM]
   
Functions:
 * ibreak(), for breaking out of an iter() loop. [Rhost] [MG]
 * New stext() function and %$N sub, equivilent of #$ in @switch, switch*(),
   and reswitch*(), but can be used in nested switches/on user input. [MG]
 * New slev() function, returns the current nesting depth of switches. [MG]
 * maillist() returns a list of @mail messages matching a range, as per
   @mail/list. Suggested by AnneLions. [MG]
 * New sorttype, lattr, sorts a list of attribute names. [MG]

Commands:
 * @channel/combine and @channel/uncombine let you combine spammy connect
   messages for channels into one line. [SW] [GM]
 * @grep now accepts /wild and /regexp switches, for wildcard/globbing and
   regular expression greps (a la wildgrep() and regrep()). Also /nocase
   for case-insensitive greps. Suggested by Paige. [MG]
 * @attribute now allows limiting attribute values through /enum and
   /limit switches. [GM]
 * @ps <pid> shows info for a single queue entry. Suggested by Paige. [MG]
   
Fixes:
 * Debug output was sometimes sent to the wrong executor. [GM]
 * A crashbug in @search was fixed. Reported by Paige. [GM]
 * A crashbug in lpids() was fixed. Reported by Mercutio. Fixed by Javelin.
 * @search elock class failed to report invalid lock strings. Fixed. [GM]
 * @cpattr and @mvattr could break attribute trees. Reported by Sketch. [MG]
 * benchmark() calculated the average incorrectly. Reported by Cheetah. [DC]
 * map(), iter(), mix() and step() are ansi-aware, now. Using any of the
   list functions without ansi should also be considerably faster. [GM]